# solution-brain

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 2026-04-07-solution-brain-design.md  2026-04-07-solution-brain-usage.md  2026-04-07-streamlit-pattern-viewer-design.md  memory-roadmap.md
docs/iterations/pattern-extract/: README.md  round-03-results.md  round-03-samples.md
docs/modules/: 00-overview.md  01-shared.md  02-ingest.md  03-extract.md  04-store.md  05-compose.md  06-pipeline.md  07-viewer.md
docs/plans/: 2026-04-07-solution-brain-mvp.md  2026-04-07-streamlit-pattern-viewer.md  2026-04-08-similarity-dedup.md
scripts/: clear_and_eval.sh  eval_extract_samples.py  run_pipeline.py  streamlit_patterns.py
src/brain/: config.py  models.py  streamlit_launcher.py  tools.py  viewer.py
src/brain/compose/: assembler.py  menu.py  tools.py
src/brain/compose/templates/: system.txt
src/brain/extract/: chunker.py  refiner.py
src/brain/ingest/: cleaner.py  reader.py  state.py
src/brain/memory/: soul.py  tools.py
src/brain/prompts/: __init__.py  compose_system.txt  extract_dedup_judge.txt  extract_merge_description.txt  extract_patterns.txt  loader.py
src/brain/store/: embedding.py  pattern_db.py  retriever.py
tests/: conftest.py  helpers.py  test_compose.py  test_extract.py  test_ingest.py  test_models.py  test_store.py  test_viewer.py
