[project]
name = "brain"
version = "0.1.0"
description = "Language pattern extraction and injection for chat personality"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "streamlit>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
